--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ projectName=named-variables
 projectGroup=sh.cody
 projectVersion=1.1.0
 projectUrl=https://github.com/MaxwellCody/named-variables
+projectScmUrl=https://github.com/MaxwellCody/named-variables.git
